# hoyolab-rss-feeds

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASENOTES.md  example.conf  example.toml  feeds.conf  hoyolab.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_hoyolab.py  tox.ini
.github/workflows/: action.yaml  build.yaml  deploy.yaml  main.yaml  publish.yaml  release.yaml  test.yaml
hoyolab_rss_feeds/: __main__.py  configs.py  errors.py  feeds.py  hoyolab.py  loaders.py  models.py  writers.py
src/hoyolabrssfeeds/: __init__.py  __main__.py  configs.py  errors.py  feeds.py  hoyolab.py  loaders.py  models.py  writers.py
tests/: conftest.py  test_configs.py  test_feeds.py  test_hoyolab.py  test_integration.py  test_loaders.py  test_models.py  test_writers.py
tests/data/: feed_config.toml  json_feed.json
