[build-system]
requires = ["setuptools >= 82", "setuptools-scm >= 9"]
build-backend = "setuptools.build_meta"

[project]
name = "hoyolab-rss-feeds"
authors = [{name = "c3kay"}]
description = "RSS feed generator for official game news from Hoyolab."
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
keywords = [
    "hoyolab",
    "rss",
    "feed",
    "rss-generator",
    "jsonfeed",
    "atom",
    "genshin-impact",
    "honkai-impact",
    "honkai-starrail",
    "zenless-zone-zero"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary"
]
dependencies = [
    "aiohttp ~= 3.13.3",
    "aiofiles ~= 25.1.0",
    "pydantic ~= 1.10.22, < 2",
    'tomli ~= 2.2.1 ; python_version < "3.11"'
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tox ~= 4.50.1",
    "pytest ~= 9.0.2",
    "pytest-asyncio ~= 1.3.0",
    "pytest-cov ~= 7.0.0",
    "pytest-mock ~= 3.15.1",
    "atoma ~= 0.0.17",
    "langdetect ~= 1.0.9"
]

[project.urls]
"Repository" = "https://github.com/c3kay/hoyolab-rss-feeds"

[project.scripts]
hoyolab-rss-feeds = "hoyolabrssfeeds.__main__:cli"
hoyolabrssfeeds = "hoyolabrssfeeds.__main__:cli"

# infer version from git
[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "python-simplified-semver"

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-append --cov-report=xml --cov-report=term-missing"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["hoyolabapi: marker for hoyolab api tests"]

[tool.coverage.paths]
# https://coverage.readthedocs.io/en/6.5.0/config.html#paths
# https://github.com/pytest-dev/pytest-cov/blob/master/examples/src-layout/.coveragerc
sources = [
    "src",
    "*/site-packages"
]

[tool.coverage.run]
source = ["hoyolabrssfeeds"]
omit = ["**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",  # need to re-enable the default
    "@abstractmethod"
]

[tool.mypy]
files = "src/,tests/"
strict = true
pretty = true
plugins = [
  "pydantic.mypy"
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.tox]
isolated_build = true
skip_missing_interpreters = true
env_list = [
    "clean",
    "lint",
    "type",
    "py310",
    "py311",
    "py312",
    "py313"
]

[tool.tox.gh.python]
"3.10" = ["py310"]
"3.11" = ["py311"]
"3.12" = ["py312"]
"3.13" = ["py313"]

[tool.tox.env.testenv]
deps = [
    "pytest ~= 9.0.2",
    "pytest-asyncio ~= 1.3.0",
    "pytest-cov ~= 7.0.0",
    "pytest-mock ~= 3.15.1",
    "coverage[toml] ~= 7.13.5",
    "atoma ~= 0.0.17",
    "langdetect ~= 1.0.9"
]
commands = [["pytest {posargs}"]]

[tool.tox.env.type]
deps = ["mypy ~= 1.19.1", "{[testenv]deps}"]
commands = [["mypy --install-types --non-interactive {posargs}"]]

[tool.tox.env.clean]
skip_install = true
deps = ["coverage[toml] ~= 7.13.5"]
commands = [["coverage erase"]]

[tool.tox.env.lint]
skip_install = true
deps = ["ruff ~= 0.15.18"]
commands = [["ruff check {posargs}"]]
